<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Commutimer</string>

    <!-- Main activity -->
    <string name="button_new_trip">New Trip</string>
    <string name="most_recent_trip_label">Most Recent</string>

    <!-- New trip activity -->
    <string name="button_start_trip">Start</string>
    <string name="preset_label">Presets:</string>
    <string name="button_save_preset">Save Preset</string>
    <string name="preset_directory">Presets</string>
    <string name="mode_label">Mode:</string>
    <string-array name="leg_types">
        <item>Foot</item>
        <item>Bus</item>
        <item>Subway</item>
        <item>Other</item>
    </string-array>
    <string name="button_new_leg">New Leg</string>
    <string name="leg_label">Leg %d</string>
    <string name="route_label">Route:</string>
    <string name="direction_label">Direction:</string>
    <string name="source_label">Source:</string>
    <string name="destination_label">Destination:</string>

    <!-- Traveling activity -->
    <string name="total_timer_label">Total Time:</string>
    <string name="button_go">GO!</string>
    <string name="button_start_leg">Start Leg</string>
    <string name="button_end_leg">End Leg</string>
    <string name="button_continue">Continue</string>

    <string name="back_popup_message">Would you like to go back?</string>
    <string name="back_popup_yes">Yes</string>
    <string name="back_popup_no">No</string>

    <!-- Edit trip activity -->
    <string name="trip_save_directory">CommutimerTrips</string>
    <string name="trip_filename_prefix">Trip_</string>
    <string name="trip_filename_extension">.json</string>
    <string name="saved_message">Saved trip to %s</string>

    <string name="overwrite_popup_message">File already exists. What would you like to do?</string>
    <string name="button_save">Save</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_rename">Rename</string>
    <string name="button_cancel">Cancel</string>

    <!-- GtfsInfo -->
    <string name="gtfs_info_directory">RouteInfo</string>
    <string name="gtfs_info_file_extension">.xml</string>
    <string name="routes_filename">routes</string>
</resources>
