<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_trip_root_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preset_label"/>
            <Spinner
                android:id="@+id/preset_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
            <Button
                android:id="@+id/save_preset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save_preset"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:onClick="savePreset"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:text="@string/button_start_trip"
                android:onClick="startNewTrip"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leg_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/button_new_leg"
            android:onClick="addNewLeg"/>
    </LinearLayout>
</ScrollView>
