<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/leg_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
            android:paddingStart="@dimen/activity_vertical_margin"/>
        <Spinner
            android:id="@+id/mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu">
        </TextView>
        <Spinner
            android:id="@+id/route_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"/>
        <Spinner
            android:id="@+id/direction_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"/>
        <Spinner
            android:id="@+id/source_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"/>
        <Spinner
            android:id="@+id/destination_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <TimePicker
        android:id="@+id/start_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner">
    </TimePicker>
    <TimePicker
        android:id="@+id/end_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner">
    </TimePicker>
</LinearLayout>
